Open playlist from the playlist window hits B_REFS_RECEIVED and the drag and drop out side of playlistview hits B_SIMPLE_DATA, so adding append_index from the B_REFS_RECEIVED fixes the ticket #4332. + spel fix.

Stippi what do you think?

+alphabranch

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32828 a95241bf-73f2-0310-859d-f6bbb57e9c96